# data-cloud-run-auth

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
dealroom_cloud_run_auth/: __init__.py  __main__.py  id_token_credentials.py  session.py
scripts/: export_requirements.sh
